src/test/ui/associated-types/cache/elision.stderr
error: compilation successful
  --> $DIR/elision.rs:24:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

